ui-kit/android/v4/ai-features.mdx
---
title: "AI"
description: "AI — CometChat documentation."
---

## Overview

CometChat's AI capabilities greatly enhance user interaction and engagement in your application. Let's understand how the Android UI Kit achieves these features.

## Conversation Starters

When a user initiates a new chat, the UI kit displays a list of suggested opening lines that users can select, making it easier for them to start a conversation. These suggestions are powered by CometChat's AI, which predicts contextually relevant conversation starters.

For a comprehensive understanding and guide on implementing and using the Conversation Starters, refer to our specific guide on the [Conversation Starter](/fundamentals/ai-user-copilot/conversation-starter).

Once you have successfully activated the [Conversation Starter](/fundamentals/ai-user-copilot/conversation-starter) from your CometChat Dashboard, the feature will automatically be incorporated into the [MessageList](/ui-kit/android/v4/message-list) Component of UI Kits.

<Frame>
  <img src="/images/d053ce56-ai_overview_cometchat_screens-bdbef3c55d2c808ce16b3ff033611eed.png" />
</Frame>

## Smart Replies

Smart Replies are AI-generated responses to messages. They can predict what a user might want to say next by analyzing the context of the conversation. This allows for quicker and more convenient responses, especially on mobile devices.

For a comprehensive understanding and guide on implementing and using the Smart Replies, refer to our specific guide on the [Smart Replies](/fundamentals/ai-user-copilot/smart-replies).

Once you have successfully activated the [Smart Replies](/fundamentals/ai-user-copilot/smart-replies) from your CometChat Dashboard, the feature will automatically be incorporated into the Action sheet of [MessageComposer](/ui-kit/android/v4/message-composer) Component of UI Kits.

<Frame>
  <img src="/images/9ad96b48-ai_smart_reply_cometchat_screens-a9b8f67a16f22459d2f1338d79aada72.png" />
</Frame>

## Conversation Summary

The Conversation Summary feature provides concise summaries of long conversations, allowing users to catch up quickly on missed chats. This feature uses natural language processing to determine the main points in a conversation.

For a comprehensive understanding and guide on implementing and using the Conversation Summary, refer to our specific guide on the [Conversation Summary](/fundamentals/ai-user-copilot/conversation-summary).

Once you have successfully activated the [Smart Replies](/fundamentals/ai-user-copilot/smart-replies) from your CometChat Dashboard, the feature will automatically be incorporated into the Action sheet of [MessageComposer](/ui-kit/android/v4/message-composer) Component of UI Kits.

<Frame>
  <img src="/images/dc8d238e-ai_conversation_summary_cometchat_screens-957a5de58630eef8cfc7d27e9a11a6c5.png" />
</Frame>

## AI Assist Bot

AI Assist Bots automate responses and prompt interaction in the chat. They can handle common queries, assist with tasks, and provide information, freeing up human resources for more complex issues.

For a comprehensive understanding and guide on implementing and using the AI Assist Bot, refer to our specific guide on the [AI Assist Bot](https://assets.cometchat.io/legacy-docs/ai-chatbots/ai-bots/bots.html).

Once you have successfully activated the [AI Assist Bot](https://assets.cometchat.io/legacy-docs/ai-chatbots/ai-bots/bots.html) from your CometChat Dashboard, the feature will automatically be incorporated into the Action sheet of [MessageComposer](/ui-kit/android/v4/message-composer) Component of UI Kits.

<Frame>
  <img src="/images/a1bccf16-ai_assist_bot_cometchat_screens-7f8ea5d4aad3092abcd6bdd4c4acaf8f.png" />
</Frame>
